# Spectator_Qubit_Figure_Data

./: .gitignore  LICENSE  README.md  pyproject.toml
Fig_01/: 00_PhaseDistributions_FullFigure.ipynb
Fig_02/: 00_Measurement_Based_Full.ipynb  01_Fig2d_data_xy.pkl  01_Fig2d_data_z.pkl  Fig2c_data.pkl  Fig2d_sims_xy.pkl  Fig2d_sims_z.pkl
Fig_03/: 00_Gate_Based_FullFigure.ipynb  Fig3c_BVL_fit_data.pkl  Fig3c_data_XY_BVL_plot.pkl  Fig3d_Average.pkl  Fig3d_NoAverage.pkl  Fig3d_data_wait_time.pkl
Fig_04/: 00_Fidelity_Pentanglement_Full_Figure.ipynb  01_Fig4_data.pkl
Fig_SI_01/: 00_SI_Fig1_Figure.ipynb
Fig_SI_02/: 00_SI_Fig2_Figure.ipynb
Fig_SI_03/: 00_SI_Fig3_Figure.ipynb  SI_Fig3_data.pkl
Fig_SI_04/: 00_SI_Fig4_Figure.ipynb  SI_fig4_data.pkl
Fig_SI_05/: 00_SI_Fig5_Figure.ipynb
Fig_SI_06/: 00_SI_Fig6_Figure.ipynb  SI_fig6_SSRO.pkl  SI_fig6_repump_decays.pkl  SI_fig6_repump_fitparams.pkl
Fig_SI_07_and_08/: 00_SI_Fig7_and_8_Figure.ipynb  01_dataset_xy.pkl  01_dataset_z.pkl
Fig_SI_09_and_10/: 00_SI_Fig9_and_10_Figure.ipynb  data_to_plot_xy.pkl  data_to_plot_z.pkl
